# inferprompt

./: .env.example  .gitignore  CLAUDE.md  README.md  SPECS.md  demo.sh  pyproject.toml  requirements.txt  run.sh  run_tests.sh  test_analyze.sh  test_api.sh  test_feedback.sh  test_history.sh
app/: __init__.py  main.py
app/api/: optimizer.py
app/core/: asp_engine.py
app/models/: database.py  prompt.py
app/services/: meta_llm.py  prompt_optimizer.py
examples/: simple_optimization.py
tests/: README.md  conftest.py
tests/unit/app/api/: test_optimizer.py
tests/unit/app/core/: test_asp_engine.py
tests/unit/app/models/: test_prompt.py
tests/unit/app/services/: test_meta_llm.py  test_prompt_optimizer.py
